# Unitree-Go2-Mapping-and-Navigation-Using-Intel-RealSense-D435i-and-RTAB-Map

./: .gitignore  LICENSE  README.md
A*_navigation_ws/src/vision_obstacle_detection/: a_star.py  setup.py
RTABMAP_ws/src/go2_camera_bringup/: package.xml  setup.py
RTABMAP_ws/src/go2_camera_bringup/go2_camera_bringup/: odom_to_tf.py
RTABMAP_ws/src/vision_obstacle_detection/: vision_obstacle_detection_node.py
RTABMAP_ws/src/vision_obstacle_detection/vision_obstacle_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rtabmap_ws/: .gitignore  README.md
rtabmap_ws/src/go2_camera_bringup/go2_camera_bringup/: odom_time_sync.py
rtabmap_ws/src/go2_camera_bringup/launch/: camera_odom_tf.launch.py
rtabmap_ws/src/rtabmap_ros/rtabmap_launch/launch/: rtabmap.launch.py
rtabmap_ws/src/rtabmap_ros/rtabmap_launch/launch/config/: rtabmap_params.yaml
src/go2_camera_bringup/: setup.cfg
src/go2_camera_bringup/launch/: camera_odom_tf.launch.py
unitree_navigation/: setup.sh
unitree_navigation/src/vision_obstacle_detection/vision_obstacle_detection/: a_star.py
unitree_ros2/src/vision_obstacle_detection/: setup.py
unitree_ros2/src/vision_obstacle_detection/vision_obstacle_detection/: vision_obstacle_detection_node.py
